# difuze

./: .gitignore  DOCKER.md  README.md
InterfaceHandlers/: build.sh
InterfaceHandlers/AnalysisHelpers/: build.sh
InterfaceHandlers/AnalysisHelpers/Dr_linker/: build.sh
InterfaceHandlers/AnalysisHelpers/Dr_linker/src/: main.cpp
InterfaceHandlers/AnalysisHelpers/EntryPointIdentifier/: build.sh
InterfaceHandlers/AnalysisHelpers/EntryPointIdentifier/src/: main.cpp
InterfaceHandlers/MainAnalysisPasses/: CMakeLists.txt  build.sh
InterfaceHandlers/MainAnalysisPasses/DeviceNameFinder/: .gdb_history  CMakeLists.txt
InterfaceHandlers/MainAnalysisPasses/DeviceNameFinder/include/: TypePrintHelper.h
InterfaceHandlers/MainAnalysisPasses/DeviceNameFinder/src/: DeviceNameFinder.cpp  TypePrintHelper.cpp
InterfaceHandlers/MainAnalysisPasses/IoctlCmdFinder/: CMakeLists.txt
InterfaceHandlers/MainAnalysisPasses/IoctlCmdFinder/include/: IOInstVisitor.h  TypePrintHelper.h
InterfaceHandlers/MainAnalysisPasses/IoctlCmdFinder/src/: IOInstVisitor.cpp  NewIoctlCmdParser.cpp  TypePrintHelper.cpp
InterfaceHandlers/MainAnalysisPasses/RangeAnalysis/: CMakeLists.txt
InterfaceHandlers/MainAnalysisPasses/RangeAnalysis/include/: RangeAnalysis.h  vSSA.h
InterfaceHandlers/MainAnalysisPasses/RangeAnalysis/src/: RangeAnalysis.cpp  vSSA.cpp
InterfaceHandlers/MainAnalysisPasses/Utils/: CMakeLists.txt
InterfaceHandlers/MainAnalysisPasses/Utils/include/: CFGUtils.h  FileUtils.h  InstructionUtils.h
InterfaceHandlers/MainAnalysisPasses/Utils/src/: CFGUtils.cpp  FileUtils.cpp  InstructionUtils.cpp
InterfaceHandlers/MainAnalysisPasses/V4L2Processor/: CMakeLists.txt
InterfaceHandlers/MainAnalysisPasses/V4L2Processor/include/: DefIoctlInstVisitor.h  IOInstVisitor.h  TypePrintHelper.h
InterfaceHandlers/MainAnalysisPasses/V4L2Processor/src/: DefIoctlInstVisitor.cpp  IOInstVisitor.cpp  NewIoctlCmdParser.cpp  TypePrintHelper.cpp  V4L2ConfigProcessor.cpp
MangoFuzz/: dev_runner.py  runner.py
MangoFuzz/executor/: Makefile  a.out  executor.c
MangoFuzz/fuzzer/: engine.py  mango_config.py  parse.py
MangoFuzz/fuzzer/blenders/: __init__.py  blender.py  blob_blender.py  num_blender.py  string_blender.py
MangoFuzz/fuzzer/juicers/: __init__.py  globs.py  hexify_juicer.py  juicer.py  tcp_juicer.py
MangoFuzz/fuzzer/mango_types/: __init__.py  block.py  choice.py  data_guys.py  jpit.py  mapping.py  my_types.py  number.py  pointer.py  strings.py
MangoFuzz/fuzzer/utils/: __init__.py  peelers.py
build_scripts/: run_all.py  setup_difuze.py
build_scripts/components/: base_component.py  dev_name_finder.py  driver_linker.py  generate_preprocess.py  ioctl_cmd_finder.py  llvm_build.py  v4l2_cmd_finder.py
docker/: build.sh
docker/difuze60/: Dockerfile  setup_difuze.sh
helper_scripts/: parse_interface_output.py  run_all.py  setup_difuze.py
helper_scripts/components/: __init__.py  bear_build_helper.py  bear_entry_point_identifier.py  bear_generate_includes.py  bear_generate_preprocess.py  bear_helper.py  bear_llvm_build.py  bear_parse_headers.py  bear_parse_v4l2_header.py  dev_name_finder.py  entry_point_identifier.py  generate_includes.py  generate_preprocess.py  headers_helper.py  ioctl_cmd_finder.py  llvm_build.py  parse_headers.py  parse_v4l2_header.py  v4l2_cmd_finder.py
helper_scripts/post_processing/: c2xml  parse.py  post_parse.py  pre_parse.py  run_all.py
helper_scripts/post_processing/generics/: generic_arr.xml  generic_i16.xml  generic_i32.xml  generic_i64.xml
